--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,7 @@ jobs:
         with:
           pull_request: "1"
           added: false
-          modifed: false
+          modified: false
 
       - name: Test
         run: |
