--- a/action.yml
+++ b/action.yml
@@ -45,6 +45,7 @@ runs:
       PR_LS_FILES_MODIFIED: ${{ inputs.modified }}
       INPUTS_GITHUB_TOKEN: ${{ inputs.github_token }}
     run: |
+      # ls-files
       # shellcheck disable=SC2046
       export GH_ENTERPRISE_TOKEN="${INPUTS_GITHUB_TOKEN:-${GH_ENTERPRISE_TOKEN:-${{ github.token }}}}"
       export GH_TOKEN="${GH_ENTERPRISE_TOKEN}"
