--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,13 @@ jobs:
 
   test-action:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        pr:
+          - 2
+          - 3
+          - 4
+          - ${{ github.event.number}}
     steps:
       - name: Checkout
         id: checkout
@@ -22,6 +28,8 @@ jobs:
       - name: Test Local Action
         id: test-action
         uses: ./
+        with:
+          pull_request: ${{ matrix.pr }}
 
       - name: Print Output
         id: output
