--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh pr diff --name-only ${{ github.event.number }} | sort | tee pr-name-only.txt
+          gh pr diff --name-only ${{ matrix.pr }} | sort | tee pr-name-only.txt
           cat << 'EOS' | tee output.txt
           ${{ steps.test-action.outputs.files }}
           EOS
