--- a/action.yml
+++ b/action.yml
@@ -5,7 +5,7 @@ author: srz-zumix
 inputs:
   pull_request:
     description: 'pull request number|url|branch'
-    default: ${{ github.event.number }}
+    default: ${{ github.event.pull_request.html_url }}
     type: string
   added:
     description: 'show added files in the output'
@@ -49,12 +49,14 @@ runs:
       # shellcheck disable=SC2046
       export GH_ENTERPRISE_TOKEN="${INPUTS_GITHUB_TOKEN:-${GH_ENTERPRISE_TOKEN:-${{ github.token }}}}"
       export GH_TOKEN="${GH_ENTERPRISE_TOKEN}"
-      DELIMITER="<$(openssl rand -hex 8)>"
-      {
-        echo "files<<${DELIMITER}"
-        ${{ github.action_path }}/gh-pr-ls-files ${{ inputs.pull_request }}
-        echo "${DELIMITER}"
-      } >> "${GITHUB_OUTPUT}"
+      LS_FILES=$(${{ github.action_path }}/gh-pr-ls-files ${{ inputs.pull_request }})
+      if [ -n "${LS_FILES}" ]; then
+        DELIMITER="<$(openssl rand -hex 8)>"
+        {
+          echo "files<<${DELIMITER}"
+          echo "${DELIMITER}"
+        } >> "${GITHUB_OUTPUT}"
+      fi
 
 branding:
   icon: 'file'
