--- a/action.yml
+++ b/action.yml
@@ -52,19 +52,7 @@ runs:
       # shellcheck disable=SC2046
       export GH_ENTERPRISE_TOKEN="${INPUTS_GITHUB_TOKEN:-${GH_ENTERPRISE_TOKEN:-${{ github.token }}}}"
       export GH_TOKEN="${GH_ENTERPRISE_TOKEN}"
-      LS_FILES=$(${{ github.action_path }}/gh-pr-ls-files ${{ inputs.pull_request }})
-      FILE_COUNT=$(echo "${LS_FILES}" | wc -l)
-      if [ "${FILE_COUNT}" -gt 1 ]; then
-        DELIMITER="<$(openssl rand -hex 8)>"
-        {
-          echo "files<<${DELIMITER}"
-          echo "${LS_FILES}"
-          echo "${DELIMITER}"
-        } >> "${GITHUB_OUTPUT}"
-      else
-        echo "files=${LS_FILES}" >> "${GITHUB_OUTPUT}"
-      fi
-      echo "count=${FILE_COUNT}" >> "${GITHUB_OUTPUT}"
+      ${{ github.action_path }}/run-on-actions.sh ${{ inputs.pull_request }})
 
 branding:
   icon: 'file'
