--- a/action.yml
+++ b/action.yml
@@ -52,7 +52,7 @@ runs:
       # shellcheck disable=SC2046
       export GH_ENTERPRISE_TOKEN="${INPUTS_GITHUB_TOKEN:-${GH_ENTERPRISE_TOKEN:-${{ github.token }}}}"
       export GH_TOKEN="${GH_ENTERPRISE_TOKEN}"
-      ${{ github.action_path }}/run-on-actions.sh ${{ inputs.pull_request }})
+      ${{ github.action_path }}/run-on-actions.sh ${{ inputs.pull_request }}
 
 branding:
   icon: 'file'
