--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,7 +133,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          cat << 'EOS' | awk 'NF' | tee expected.txt
+          cat << 'EOS' | tee expected.txt
           ${{ matrix.expected }}
           EOS
           cat << 'EOS' | tee output.txt
