--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,13 +50,13 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh pr diff --name-only ${{ github.event.number }} | sort | tee pr-name-only.txt
+          gh pr diff --name-only ${{ github.event.number }} | sort | tee expected.txt
           cat << 'EOS' | awk 'NF' | sort | tee output.txt
           ${{ steps.added.outputs.files }}
           ${{ steps.deleted.outputs.files }}
           ${{ steps.modified.outputs.files }}
           EOS
-          diff output.txt pr-name-only.txt
+          diff expected.txt output.txt
 
   test-type:
     runs-on: ubuntu-latest
@@ -141,3 +141,30 @@ jobs:
           EOS
           diff expected.txt output.txt
 
+  test-filter-and-delimiter:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@v4
+
+      - name: Test Local Action
+        id: ls-files
+        uses: ./
+        with:
+          pull_request: 5
+          filter: '.*(\\.yml||\\.sh)$'
+          delimiter: ', '
+
+      - name: Print Output
+        id: output
+        run: |
+          echo "${{ toJson(steps.test-action.outputs) }}"
+
+      - name: Test
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo ".github/workflows/ci.yml, action.yml, run-on-actions.sh" | tee expected.txt
+          echo "${{ steps.ls-files.outputs.files }}" | tee output.txt
+          diff expected.txt output.txt
