--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,22 +41,17 @@ jobs:
           deleted: false
           modified: true
 
-      - name: Print Output
-        id: output
-        run: |
-          echo "${{ toJson(steps.test-action.outputs) }}"
-
       - name: Test
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh pr diff --name-only ${{ github.event.number }} | sort | tee pr-name-only.txt
+          gh pr diff --name-only ${{ github.event.number }} | sort | tee expected.txt
           cat << 'EOS' | awk 'NF' | sort | tee output.txt
           ${{ steps.added.outputs.files }}
           ${{ steps.deleted.outputs.files }}
           ${{ steps.modified.outputs.files }}
           EOS
-          diff output.txt pr-name-only.txt
+          diff expected.txt output.txt
 
   test-type:
     runs-on: ubuntu-latest
@@ -69,6 +64,7 @@ jobs:
             added: false
             deleted: true
             modified: false
+            count: 1
             expected: |-
               .markdown-lint.yml
           - name: Deleted Only (list added/modified)
@@ -76,12 +72,14 @@ jobs:
             added: true
             deleted: false
             modified: true
+            count: 0
             expected: ""
           - name: Added Only (list added)
             pr: 3
             added: true
             deleted: false
             modified: false
+            count: 1
             expected: |-
               test
           - name: Added Only (list deleted/modified)
@@ -89,24 +87,28 @@ jobs:
             added: false
             deleted: true
             modified: true
+            count: 0
             expected: ""
           - name: No Changes (list modified)
             pr: 4
             added: false
             deleted: false
             modified: true
+            count: 0
             expected: ""
           - name: No Changes (list added/deleted)
             pr: 4
             added: true
             deleted: true
             modified: false
+            count: 0
             expected: ""
           - name: Empty File Deleted Only (list deleted)
             pr: 6
             added: false
             deleted: true
             modified: false
+            count: 1
             expected: |-
               test
     name: test-action - ${{ matrix.name }}
@@ -140,4 +142,33 @@ jobs:
           ${{ steps.test-action.outputs.files }}
           EOS
           diff expected.txt output.txt
+          test ${{ steps.test-action.outputs.count }} -eq ${{ matrix.count }}
 
+  test-filter-and-delimiter:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        id: checkout
+        uses: actions/checkout@v4
+
+      - name: Test Local Action
+        id: test-action
+        uses: ./
+        with:
+          pull_request: 5
+          filter: '.*(\.yml|\.sh)$'
+          delimiter: ','
+
+      - name: Print Output
+        id: output
+        run: |
+          echo "${{ toJson(steps.test-action.outputs) }}"
+
+      - name: Test
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo ".github/workflows/ci.yml,action.yml,run-on-actions.sh" | tee expected.txt
+          echo "${{ steps.test-action.outputs.files }}" | tee output.txt
+          diff expected.txt output.txt
+          test ${{ steps.test-action.outputs.count }} -eq 3
