--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,16 @@ inputs:
     required: false
     default: true
     type: boolean
+  filter:
+    description: 'show files with the specified grep filter in the output'
+    required: false
+    default: ''
+    type: string
+  delimiter:
+    description: 'delimiter for the output'
+    required: false
+    default: ""
+    type: string
   github_token:
     description: 'GitHub TOKEN'
     default: ${{ github.token }}
@@ -47,6 +57,8 @@ runs:
       PR_LS_FILES_DELETED: ${{ inputs.deleted }}
       PR_LS_FILES_MODIFIED: ${{ inputs.modified }}
       INPUTS_GITHUB_TOKEN: ${{ inputs.github_token }}
+      INPUTS_DELIMITER: ${{ inputs.delimiter }}
+      INPUTS_FILTER: ${{ inputs.filter }}
     run: |
       # ls-files
       # shellcheck disable=SC2046
