--- a/action.yml
+++ b/action.yml
@@ -62,7 +62,7 @@ runs:
         echo "${PR_LS_FILES_DELETED}"
         echo "${PR_LS_FILES_MODIFIED}"
         echo "${PR_LS_FILES_RENAMED}"
-      } | sort | uniq | tr '\n' '')
+      } | sort | uniq | tr '\n' ',')
       if [ "${JOIN_FLAGS}" = true ]; then
         echo "flag=false" >> "${GITHUB_OUTPUT}"
       else
