--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ inputs:
     default: ${{ github.event.pull_request.html_url }}
     type: string
   repository:
-    description: 'repository'
+    description: 'Repository name with owner. For example, srz-zumix/gh-pr-ls-files'
     default: ${{ github.repository }}
     type: string
   added:
