--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/checkout@v5
         with:
           path: test-action
+          persist-credentials: false
 
       - name: Test Local Action (A)
         id: added
@@ -46,13 +47,17 @@ jobs:
       - name: Test
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ADDED_FILES: ${{ steps.added.outputs.files }}
+          DELETED_FILES: ${{ steps.deleted.outputs.files }}
+          MODIFIED_FILES: ${{ steps.modified.outputs.files }}
+          RENAMED_FILES: ${{ steps.renamed.outputs.files }}
         run: |
           gh pr diff -R ${{ github.repository }} --name-only ${{ github.event.number }} | sort | tee expected.txt
           cat << 'EOS' | awk 'NF' | sort | tee output.txt
-          ${{ steps.added.outputs.files }}
-          ${{ steps.deleted.outputs.files }}
-          ${{ steps.modified.outputs.files }}
-          ${{ steps.renamed.outputs.files }}
+          ${{ env.ADDED_FILES }}
+          ${{ env.DELETED_FILES }}
+          ${{ env.MODIFIED_FILES }}
+          ${{ env.RENAMED_FILES }}
           EOS
           diff expected.txt output.txt
 
@@ -145,6 +150,8 @@ jobs:
       - name: Checkout
         id: checkout
         uses: actions/checkout@v5
+        with:
+          persist-credentials: false
 
       - name: Test Local Action
         id: test-action
@@ -156,23 +163,27 @@ jobs:
           modified: ${{ matrix.modified }}
           renamed: ${{ matrix.renamed }}
 
-      - name: Print Output
+      - &print-output
+        name: Print Output
         id: output
+        env:
+          TEST_ACTION_OUTPUTS: ${{ toJson(steps.test-action.outputs) }}
         run: |
-          echo "${{ toJson(steps.test-action.outputs) }}"
+          echo "${TEST_ACTION_OUTPUTS}"
 
       - name: Test
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TEST_ACTION_FILES: ${{ steps.test-action.outputs.files }}
+          TEST_ACTION_COUNT: ${{ steps.test-action.outputs.count }}
         run: |
           cat << 'EOS' | tee expected.txt
           ${{ matrix.expected }}
           EOS
           cat << 'EOS' | tee output.txt
-          ${{ steps.test-action.outputs.files }}
+          ${{ env.TEST_ACTION_FILES }}
           EOS
           diff expected.txt output.txt
-          test ${{ steps.test-action.outputs.count }} -eq ${{ matrix.count }}
+          test "${TEST_ACTION_COUNT}" -eq ${{ matrix.count }}
 
   test-paginate:
     runs-on: ubuntu-latest
@@ -218,6 +229,8 @@ jobs:
       - name: Checkout
         id: checkout
         uses: actions/checkout@v5
+        with:
+          persist-credentials: false
 
       - name: Test Local Action
         id: test-action
@@ -229,21 +242,21 @@ jobs:
           modified: ${{ matrix.modified }}
           renamed: ${{ matrix.renamed }}
 
-      - name: Print Output
-        id: output
-        run: |
-          echo "${{ toJson(steps.test-action.outputs) }}"
+      - *print-output
 
       - name: Test
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TEST_ACTION_FILES: ${{ steps.test-action.outputs.files }}
+          TEST_ACTION_COUNT: ${{ steps.test-action.outputs.count }}
         run: |
-          test ${{ steps.test-action.outputs.count }} -eq ${{ matrix.count }}
+          test "${TEST_ACTION_COUNT}" -eq ${{ matrix.count }}
 
   test-filter-and-delimiter:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
+        with:
+          persist-credentials: false
 
       - name: Test Local Action
         id: test-action
@@ -253,24 +266,24 @@ jobs:
           filter: '.*(\.yml|\.sh)$'
           delimiter: ','
 
-      - name: Print Output
-        id: output
-        run: |
-          echo "${{ toJson(steps.test-action.outputs) }}"
+      - *print-output
 
       - name: Test
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TEST_ACTION_FILES: ${{ steps.test-action.outputs.files }}
+          TEST_ACTION_COUNT: ${{ steps.test-action.outputs.count }}
         run: |
           echo ".github/workflows/ci.yml,action.yml,run-on-actions.sh" | tee expected.txt
-          echo "${{ steps.test-action.outputs.files }}" | tee output.txt
+          echo "${TEST_ACTION_FILES}" | tee output.txt
           diff expected.txt output.txt
-          test ${{ steps.test-action.outputs.count }} -eq 3
+          test "${TEST_ACTION_COUNT}" -eq 3
 
   test-exclude:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
+        with:
+          persist-credentials: false
 
       - name: Test Local Action
         id: test-action
@@ -279,16 +292,14 @@ jobs:
           pull_request: 5
           exclude: '.*(\.yml|\.sh)$'
 
-      - name: Print Output
-        id: output
-        run: |
-          echo "${{ toJson(steps.test-action.outputs) }}"
+      - *print-output
 
       - name: Test
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TEST_ACTION_FILES: ${{ steps.test-action.outputs.files }}
+          TEST_ACTION_COUNT: ${{ steps.test-action.outputs.count }}
         run: |
           echo "gh-pr-ls-files" | tee expected.txt
-          echo "${{ steps.test-action.outputs.files }}" | tee output.txt
+          echo "${TEST_ACTION_FILES}" | tee output.txt
           diff expected.txt output.txt
-          test ${{ steps.test-action.outputs.count }} -eq 1
+          test "${TEST_ACTION_COUNT}" -eq 1
