--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,17 +2,20 @@ name: Lint
 on:
   pull_request:
 
-permissions:
-  checks: write
-  contents: read
-  pull-requests: write
+permissions: {}
 
 jobs:
   shellcheck:
     runs-on: ubuntu-latest
+    permissions: &permissions
+      checks: write
+      contents: read
+      pull-requests: write
     steps:
       - uses: actions/checkout@v5
-      - uses: reviewdog/action-shellcheck@v1
+        with:
+          persist-credentials: false
+      - uses: reviewdog/action-shellcheck@4c07458293ac342d477251099501a718ae5ef86e # v1.32.0
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
@@ -24,17 +27,23 @@ jobs:
 
   actionlint:
     runs-on: ubuntu-latest
+    permissions: *permissions
     steps:
       - uses: actions/checkout@v5
-      - uses: reviewdog/action-actionlint@v1
+        with:
+          persist-credentials: false
+      - uses: reviewdog/action-actionlint@95395aac8c053577d0bc67eb7b74936c660c6f66 # v1.67.0
         with:
           reporter: github-pr-review
 
   markdownlint:
     runs-on: ubuntu-latest
+    permissions: *permissions
     steps:
       - uses: actions/checkout@v5
+        with:
+          persist-credentials: false
       - name: markdownlint
-        uses: reviewdog/action-markdownlint@v0
+        uses: reviewdog/action-markdownlint@3667398db9118d7e78f7a63d10e26ce454ba5f58 # v0.26.2
         with:
           reporter: github-pr-review
