--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,7 +7,7 @@ permissions: {}
 jobs:
   shellcheck:
     runs-on: ubuntu-latest
-    permissions: &permissions
+    permissions:
       checks: write
       contents: read
       pull-requests: write
@@ -27,7 +27,10 @@ jobs:
 
   actionlint:
     runs-on: ubuntu-latest
-    permissions: *permissions
+    permissions:
+      checks: write
+      contents: read
+      pull-requests: write
     steps:
       - uses: actions/checkout@v5
         with:
@@ -38,7 +41,10 @@ jobs:
 
   markdownlint:
     runs-on: ubuntu-latest
-    permissions: *permissions
+    permissions:
+      checks: write
+      contents: read
+      pull-requests: write
     steps:
       - uses: actions/checkout@v5
         with:
