Add unpinned-uses rule to zizmor.yml

--- a/zizmor.yml
+++ b/zizmor.yml
@@ -1,4 +1,8 @@
 rules:
+  unpinned-uses:
+    config:
+      policies:
+        actions/*: any
   template-injection:
     ignore:
       - ci.yml:57
