Add unpinned-uses rule to zizmor.yml (#40)
* Add unpinned-uses rule to zizmor.yml

* Remove print output step from CI workflow

Removed redundant print output step from CI workflow.

* Update zizmor.yml

--- a/zizmor.yml
+++ b/zizmor.yml
@@ -1,8 +1,12 @@
 rules:
+  unpinned-uses:
+    config:
+      policies:
+        actions/*: any
   template-injection:
     ignore:
       - ci.yml:57
       - ci.yml:58
       - ci.yml:59
       - ci.yml:60
-      - ci.yml:183
+      - ci.yml:176
